<resources>
    <string name="app_name">Ejer5_FiltrarFunciones</string>
    <string name="filtrar_primos">Filtrar_Primos</string>
    <string name="filtrar_magicos">Filtrar_magicos</string>
    <string name="filtrar_capicuas">Filtrar_capicuas</string>
    <string name="filtra">FILTRA</string>
    <string name="se_muestra_array">SE_MUESTRA_ARRAY</string>
    <string name="se_muestra_array_filtrado">SE_MUESTRA_ARRAY_FILTRADO</string>
</resources>