<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/seMuestraArray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_muestra_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/seMuestraArrayFiltrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_muestra_array_filtrado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.463" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="152dp"
        android:layout_height="146dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seMuestraArray"
        app:layout_constraintVertical_bias="0.119">

        <RadioButton
            android:id="@+id/primosRd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_primos" />

        <RadioButton
            android:id="@+id/magicosRd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_magicos" />

        <RadioButton
            android:id="@+id/capicuasRd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtrar_capicuas" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/filtra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>